{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 120,
  "lineage": "1d9c168e-0571-f31e-1af2-ac19cee6596a",
  "resources": [
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e5b67c6dafd3524",
            "domain": "vpc",
            "id": "eipalloc-02e5b67c6dafd3524",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-3-99-115-107.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.99.115.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-gw-1"
            },
            "tags_all": {
              "Name": "dev-nat-gw-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cce16f5d3f3be068",
            "domain": "vpc",
            "id": "eipalloc-0cce16f5d3f3be068",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-35-182-141-58.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.182.141.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-gw-2"
            },
            "tags_all": {
              "Name": "dev-nat-gw-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:internet-gateway/igw-0dd9d8a8ee12659ec",
            "id": "igw-0dd9d8a8ee12659ec",
            "owner_id": "040309051261",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0fbacf811387e4c51"
          },
          "dependencies": [
            "module.vpc-default.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e5b67c6dafd3524",
            "connectivity_type": "public",
            "id": "nat-0f1ac001a7a6c00d5",
            "network_interface_id": "eni-02c150421ea33235e",
            "private_ip": "10.0.11.39",
            "public_ip": "3.99.115.107",
            "subnet_id": "subnet-0ed80787ff5c89f1c",
            "tags": {
              "Name": "dev-nat-1"
            },
            "tags_all": {
              "Name": "dev-nat-1"
            }
          },
          "dependencies": [
            "module.vpc-default.aws_eip.nat_eips",
            "module.vpc-default.aws_subnet.private_subnets",
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cce16f5d3f3be068",
            "connectivity_type": "public",
            "id": "nat-04e409ce81433726b",
            "network_interface_id": "eni-042b663d575468d0b",
            "private_ip": "10.0.22.171",
            "public_ip": "35.182.141.58",
            "subnet_id": "subnet-0459e742fab322494",
            "tags": {
              "Name": "dev-nat-2"
            },
            "tags_all": {
              "Name": "dev-nat-2"
            }
          },
          "dependencies": [
            "module.vpc-default.aws_eip.nat_eips",
            "module.vpc-default.aws_subnet.private_subnets",
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:route-table/rtb-071a985528b70df90",
            "id": "rtb-071a985528b70df90",
            "owner_id": "040309051261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f1ac001a7a6c00d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-subnet"
            },
            "tags_all": {
              "Name": "dev-private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbacf811387e4c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-default.aws_eip.nat_eips",
            "module.vpc-default.aws_nat_gateway.nat_gateways",
            "module.vpc-default.aws_subnet.private_subnets",
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:route-table/rtb-064b19c1f0a365a22",
            "id": "rtb-064b19c1f0a365a22",
            "owner_id": "040309051261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04e409ce81433726b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-subnet"
            },
            "tags_all": {
              "Name": "dev-private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbacf811387e4c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-default.aws_eip.nat_eips",
            "module.vpc-default.aws_nat_gateway.nat_gateways",
            "module.vpc-default.aws_subnet.private_subnets",
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:route-table/rtb-02af818fc373c26df",
            "id": "rtb-02af818fc373c26df",
            "owner_id": "040309051261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd9d8a8ee12659ec",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-subnet"
            },
            "tags_all": {
              "Name": "dev-public-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbacf811387e4c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-default.aws_internet_gateway.main",
            "module.vpc-default.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d219fce98bc2c66",
            "route_table_id": "rtb-071a985528b70df90",
            "subnet_id": "subnet-0ed80787ff5c89f1c"
          },
          "dependencies": [
            "module.vpc-default.aws_eip.nat_eips",
            "module.vpc-default.aws_nat_gateway.nat_gateways",
            "module.vpc-default.aws_route_table.private_subnets",
            "module.vpc-default.aws_subnet.private_subnets",
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0210fd03a946fc34c",
            "route_table_id": "rtb-064b19c1f0a365a22",
            "subnet_id": "subnet-0459e742fab322494"
          },
          "dependencies": [
            "module.vpc-default.aws_eip.nat_eips",
            "module.vpc-default.aws_nat_gateway.nat_gateways",
            "module.vpc-default.aws_route_table.private_subnets",
            "module.vpc-default.aws_subnet.private_subnets",
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da5bcf56d63ba6b3",
            "route_table_id": "rtb-02af818fc373c26df",
            "subnet_id": "subnet-0a973b35cb3868b89"
          },
          "dependencies": [
            "module.vpc-default.aws_internet_gateway.main",
            "module.vpc-default.aws_route_table.public_subnets",
            "module.vpc-default.aws_subnet.public_subnets",
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048eed3c9920eebc2",
            "route_table_id": "rtb-02af818fc373c26df",
            "subnet_id": "subnet-0bbbff9f787104700"
          },
          "dependencies": [
            "module.vpc-default.aws_internet_gateway.main",
            "module.vpc-default.aws_route_table.public_subnets",
            "module.vpc-default.aws_subnet.public_subnets",
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-0ed80787ff5c89f1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed80787ff5c89f1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-1"
            },
            "tags_all": {
              "Name": "dev-private-1"
            },
            "vpc_id": "vpc-0fbacf811387e4c51"
          },
          "dependencies": [
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-0459e742fab322494",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0459e742fab322494",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-2"
            },
            "tags_all": {
              "Name": "dev-private-2"
            },
            "vpc_id": "vpc-0fbacf811387e4c51"
          },
          "dependencies": [
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-0a973b35cb3868b89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a973b35cb3868b89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-1"
            },
            "tags_all": {
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-0fbacf811387e4c51"
          },
          "dependencies": [
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-0bbbff9f787104700",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbbff9f787104700",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-2"
            },
            "tags_all": {
              "Name": "dev-public-2"
            },
            "vpc_id": "vpc-0fbacf811387e4c51"
          },
          "dependencies": [
            "module.vpc-default.aws_vpc.main",
            "module.vpc-default.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-default",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:vpc/vpc-0fbacf811387e4c51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f320086039d1ca0",
            "default_route_table_id": "rtb-03cd4c1ab54bd33c1",
            "default_security_group_id": "sg-073d866b2f4b7ca90",
            "dhcp_options_id": "dopt-03ada51c70837bec7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fbacf811387e4c51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cd4c1ab54bd33c1",
            "owner_id": "040309051261",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:internet-gateway/igw-036b76ab2fe882680",
            "id": "igw-036b76ab2fe882680",
            "owner_id": "040309051261",
            "tags": {
              "Name": "development-igw"
            },
            "tags_all": {
              "Name": "development-igw"
            },
            "vpc_id": "vpc-04c03d648d5e72a5c"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:route-table/rtb-02cd9bebe994bc06e",
            "id": "rtb-02cd9bebe994bc06e",
            "owner_id": "040309051261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036b76ab2fe882680",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-public-subnet"
            },
            "tags_all": {
              "Name": "development-public-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c03d648d5e72a5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018266de60fb80f34",
            "route_table_id": "rtb-02cd9bebe994bc06e",
            "subnet_id": "subnet-05a1affc1fe3a0460"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_route_table.public_subnets",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049b5126e059297bd",
            "route_table_id": "rtb-02cd9bebe994bc06e",
            "subnet_id": "subnet-074e35ac5feb1047e"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_route_table.public_subnets",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-05a1affc1fe3a0460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a1affc1fe3a0460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-public-1"
            },
            "tags_all": {
              "Name": "development-public-1"
            },
            "vpc_id": "vpc-04c03d648d5e72a5c"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-074e35ac5feb1047e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074e35ac5feb1047e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-public-2"
            },
            "tags_all": {
              "Name": "development-public-2"
            },
            "vpc_id": "vpc-04c03d648d5e72a5c"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:vpc/vpc-04c03d648d5e72a5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0c0e89337995837a7",
            "default_route_table_id": "rtb-092bf1e7fa69ec8cf",
            "default_security_group_id": "sg-0316f7d3e4949d6b8",
            "dhcp_options_id": "dopt-03ada51c70837bec7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c03d648d5e72a5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092bf1e7fa69ec8cf",
            "owner_id": "040309051261",
            "tags": {
              "Name": "development-vpc"
            },
            "tags_all": {
              "Name": "development-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0334cf70f4c23b741",
            "domain": "vpc",
            "id": "eipalloc-0334cf70f4c23b741",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-99-79-92-207.ca-central-1.compute.amazonaws.com",
            "public_ip": "99.79.92.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-nat-gw-1"
            },
            "tags_all": {
              "Name": "production-nat-gw-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4751afbeee283f4",
            "domain": "vpc",
            "id": "eipalloc-0e4751afbeee283f4",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-15-156-10-143.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.156.10.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-nat-gw-2"
            },
            "tags_all": {
              "Name": "production-nat-gw-2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d41290ef247167e",
            "domain": "vpc",
            "id": "eipalloc-01d41290ef247167e",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-3-96-15-206.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.15.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-nat-gw-3"
            },
            "tags_all": {
              "Name": "production-nat-gw-3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:internet-gateway/igw-05d70c801e6b2d1ff",
            "id": "igw-05d70c801e6b2d1ff",
            "owner_id": "040309051261",
            "tags": {
              "Name": "production-igw"
            },
            "tags_all": {
              "Name": "production-igw"
            },
            "vpc_id": "vpc-0f378dcfe9e0f0787"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0334cf70f4c23b741",
            "connectivity_type": "public",
            "id": "nat-0ccd02beddbb11d96",
            "network_interface_id": "eni-0da8973cd44f07d43",
            "private_ip": "10.10.11.32",
            "public_ip": "99.79.92.207",
            "subnet_id": "subnet-07212ece86055cd3f",
            "tags": {
              "Name": "production-nat-1"
            },
            "tags_all": {
              "Name": "production-nat-1"
            }
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat_eips",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4751afbeee283f4",
            "connectivity_type": "public",
            "id": "nat-0e5456b233124ba0c",
            "network_interface_id": "eni-0309ed50e627771e8",
            "private_ip": "10.10.22.100",
            "public_ip": "15.156.10.143",
            "subnet_id": "subnet-09caf550ebcd628f4",
            "tags": {
              "Name": "production-nat-2"
            },
            "tags_all": {
              "Name": "production-nat-2"
            }
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat_eips",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d41290ef247167e",
            "connectivity_type": "public",
            "id": "nat-02c0d2b8a35294ab2",
            "network_interface_id": "eni-05b6ecf7a7665a399",
            "private_ip": "10.10.33.195",
            "public_ip": "3.96.15.206",
            "subnet_id": "subnet-09b8a8d36d483e432",
            "tags": {
              "Name": "production-nat-3"
            },
            "tags_all": {
              "Name": "production-nat-3"
            }
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat_eips",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:route-table/rtb-07dc9e03019fbb5a4",
            "id": "rtb-07dc9e03019fbb5a4",
            "owner_id": "040309051261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ccd02beddbb11d96",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-private-subnet"
            },
            "tags_all": {
              "Name": "production-private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f378dcfe9e0f0787"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_eip.nat_eips",
            "module.vpc-prod.aws_nat_gateway.nat_gateways",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:route-table/rtb-0ab7cdbefcd075876",
            "id": "rtb-0ab7cdbefcd075876",
            "owner_id": "040309051261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e5456b233124ba0c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-private-subnet"
            },
            "tags_all": {
              "Name": "production-private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f378dcfe9e0f0787"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_eip.nat_eips",
            "module.vpc-prod.aws_nat_gateway.nat_gateways",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:route-table/rtb-028c640b8db233eaf",
            "id": "rtb-028c640b8db233eaf",
            "owner_id": "040309051261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02c0d2b8a35294ab2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-private-subnet"
            },
            "tags_all": {
              "Name": "production-private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f378dcfe9e0f0787"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_eip.nat_eips",
            "module.vpc-prod.aws_nat_gateway.nat_gateways",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:route-table/rtb-059380c2e01a3c2ae",
            "id": "rtb-059380c2e01a3c2ae",
            "owner_id": "040309051261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d70c801e6b2d1ff",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-public-subnet"
            },
            "tags_all": {
              "Name": "production-public-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f378dcfe9e0f0787"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc179c761f511dfd",
            "route_table_id": "rtb-07dc9e03019fbb5a4",
            "subnet_id": "subnet-07212ece86055cd3f"
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat_eips",
            "module.vpc-prod.aws_nat_gateway.nat_gateways",
            "module.vpc-prod.aws_route_table.private_subnets",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b77a6146331bf65a",
            "route_table_id": "rtb-0ab7cdbefcd075876",
            "subnet_id": "subnet-09caf550ebcd628f4"
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat_eips",
            "module.vpc-prod.aws_nat_gateway.nat_gateways",
            "module.vpc-prod.aws_route_table.private_subnets",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0505d04acaeb7f65e",
            "route_table_id": "rtb-028c640b8db233eaf",
            "subnet_id": "subnet-09b8a8d36d483e432"
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat_eips",
            "module.vpc-prod.aws_nat_gateway.nat_gateways",
            "module.vpc-prod.aws_route_table.private_subnets",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef86238ad87ce79c",
            "route_table_id": "rtb-059380c2e01a3c2ae",
            "subnet_id": "subnet-03d90952640a1d758"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_route_table.public_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e8c7700267cffba",
            "route_table_id": "rtb-059380c2e01a3c2ae",
            "subnet_id": "subnet-087e056822d527f76"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_route_table.public_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c96da722843069d",
            "route_table_id": "rtb-059380c2e01a3c2ae",
            "subnet_id": "subnet-02c6b9f7189834174"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_route_table.public_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-07212ece86055cd3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07212ece86055cd3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-1"
            },
            "tags_all": {
              "Name": "production-private-1"
            },
            "vpc_id": "vpc-0f378dcfe9e0f0787"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-09caf550ebcd628f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.10.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09caf550ebcd628f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-2"
            },
            "tags_all": {
              "Name": "production-private-2"
            },
            "vpc_id": "vpc-0f378dcfe9e0f0787"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-09b8a8d36d483e432",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.10.33.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b8a8d36d483e432",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-3"
            },
            "tags_all": {
              "Name": "production-private-3"
            },
            "vpc_id": "vpc-0f378dcfe9e0f0787"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-03d90952640a1d758",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d90952640a1d758",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-1"
            },
            "tags_all": {
              "Name": "production-public-1"
            },
            "vpc_id": "vpc-0f378dcfe9e0f0787"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-087e056822d527f76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087e056822d527f76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-2"
            },
            "tags_all": {
              "Name": "production-public-2"
            },
            "vpc_id": "vpc-0f378dcfe9e0f0787"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:subnet/subnet-02c6b9f7189834174",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c6b9f7189834174",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040309051261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-3"
            },
            "tags_all": {
              "Name": "production-public-3"
            },
            "vpc_id": "vpc-0f378dcfe9e0f0787"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:040309051261:vpc/vpc-0f378dcfe9e0f0787",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0488352e23a57e03c",
            "default_route_table_id": "rtb-0d93eef7569fb7e24",
            "default_security_group_id": "sg-052df54ca2889d497",
            "dhcp_options_id": "dopt-03ada51c70837bec7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f378dcfe9e0f0787",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d93eef7569fb7e24",
            "owner_id": "040309051261",
            "tags": {
              "Name": "production-vpc"
            },
            "tags_all": {
              "Name": "production-vpc"
            }
          }
        }
      ]
    }
  ]
}